fix: adjust xbg login-chat params and resolve DifyController compile issues